# cpp-sandbox

./: .clang-format  .gitignore  .gitmodules  .prettierignore  404.html  CMakeLists.txt  LICENSE  README.md  index.html  main.py  mkdocs.yml  requirements.txt  utils.hpp
lib/: CMakeLists.txt  rng.cpp  timer.cpp
src/: CMakeLists.txt  README.md  basics.cpp  cin.cpp  complex.cpp  index.html  main.cpp  qsort.cpp  test.cpp
src/1337cpp/codesignal/: 2-5_consecutive_character_groups.cpp  3-1_reverse_words.cpp  3-2_string_parsing.cpp  3-3_time_calculation.cpp  3-4_substring_search.cpp  4-1_nested_loops.cpp  4-2_uraveling_strings.cpp  4-3_obstacle_game.cpp  4-4_handling_large_numbers.cpp  5-1_array_traversal.cpp  5-2_string_manipulation.cpp  5-3_string_and_array_operations.cpp  5-4_forest.traversal.cpp  5-4_forest_traversal.cpp  5-5_array_manipulation.cpp
src/1337cpp/examples/: big_numbers.cpp  (+10 more)
src/algorithms/: 5-1.cpp  5-2.cpp  5-3.cpp  CMakeLists.txt  README.md  baloons.cpp  distances.cpp  find.cpp  headers.h  manhattan  manhattan.cpp
src/chrono/: CMakeLists.txt  cipher.cpp  encrypt.cpp  loops.cpp  tmp.cpp  vectors.cpp
src/codesignal/: 2-4_center-out_vector_traversal.cpp  3-2_string_parsing.cpp  4-2_uraveling_strings.cpp  4-3_obstacle_game.cpp  4-4_handling_large_numbers.cpp  5-1_array_traversal.cpp  5-2_string_manipulation.cpp  5-3_string_and_array_operations.cpp  5-5_array_manipulation.cpp
src/container/: container-implementation.cpp
src/containers/: CMakeLists.txt  README.md  array.cpp  bst.cpp  deque.cpp  hashmap.cpp  http_hashmap.cpp  map.cpp  strings.cpp  unordered_map.cpp  unordered_set.cpp  vector.cpp  vector_traversal.cpp
src/cuda/: stream_example.cu
src/data-structures/: CMakeLists.txt  README.md  bst.cpp  myvector.cpp  node.cpp  node.hpp  tmp.cpp
src/fileio/: CMakeLists.txt  Makefile  mycopy.cpp  myncat.cpp
src/galois/: primes.hpp
src/loops/: README.md
src/memory/: CMakeLists.txt  move-copy.cpp  types.cpp  void.cpp
src/pImpl/: Makefile  container-implementation.cpp  container-implementation.hpp  container.hpp  main.cpp  myClassImpl.cpp
src/strings/: codesignal.cpp
src/tcp/: Makefile  client.cpp  server.cpp
tests/: CMakeLists.txt  test_rng.cpp  test_test.cpp  test_timer.cpp
(+247 files in other folders)
